# feishu-plugin-urlc

./: .replit  README.md  buid.sh  pyproject.toml
backend/: init_db.py  main.py
backend/playground/: shorten_url_demo.py
backend/static/assets/: index.61bcfc47.js  index.79759b19.css  index.bb3b3434.js
backend/urlc/: database.py  models.py
backend/urlc/database/: urlc.db
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/locales/: zh.json
frontendV2/: .gitignore  .replit  package.json  pnpm-lock.yaml  replit_zip_error_log.txt  vite.config.js.timestamp-1698651672916.mjs
frontendV2/.upm/: store.json
frontendV2/src/: App.tsx  api.ts  i18n.ts  icons.tsx  index.tsx
frontendV2/src/locales/: en.json  zh.json
