[tool.poetry]
name = "feishu_plugin_urlc"
version = "0.1.0"
description = "a feishu plugin for shortening url"
authors = ["liujun"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"
mmh3 = "^4.1.0"
pybase62 = "^1.0.0"
Flask-SQLAlchemy = "^3.1.1"
loguru = "^0.7.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"